--- a/src/app/docmain2/docmain2.component.html
+++ b/src/app/docmain2/docmain2.component.html
@@ -1,81 +1,45 @@
-<div class="header">
-  <a href="#default" class="logo font-robo"><i class="fa-solid fa-files"></i>Doc-Man</a>
-  <div class="header-right">
-    <a class=" btn btn-outline-secondary px-3" href="#home"><i class="fa-solid fa-house"></i></a>
-    <a class="  btn btn-outline-secondary mx-3 px-3" href="#footer"><i class="fa-solid fa-address-book"></i></a>
-    <button type="button" class="btn btn-outline-secondary px-3" data-bs-toggle="modal" data-bs-target="#modal"><i class="fa-solid fa-book-open"></i></button>
-    <!-- <button type="button" class="" data-toggle="modal" data-target=".bd-example-modal-lg">About</button> -->
-  </div>
+<!-- <p style="color: brown;"> docmain2 works!</p> -->
+<!-- <button routerLink="/docmain1">BACK</button> -->
+<header class="header">
+    <a href="#default" class="logo ">Doc-Man</a>
+    <div class="header-right">
+        <a class=" btn btn-outline-secondary px-3" href="#home"><i class="fa-solid fa-house"></i></a>
+        <a class="  btn btn-outline-secondary mx-3 px-3" href="#footer"><i class="fa-solid fa-address-book"></i></a>
+        <button type="button" class="btn btn-outline-secondary px-3" data-bs-toggle="modal" data-bs-target="#modal"><i class="fa-solid fa-book-open"></i></button>
+        <!-- <button type="button" class="" data-toggle="modal" data-target=".bd-example-modal-lg">About</button> -->
+      </div>
+</header>
+<div class="container-fluid">
+    <div class="row mt-4">
+        <div class="col-7">
+            <div class="card ">
+                <form>
+                    <div class="p-3 row">
+                        <div class="col-5">
+                            <label class="mt-2 fw-bold">Upload the Document :</label>
+                        </div>
+                        <div class="col-7">
+                            {{""+conditionPdf}}
+                            <div *ngIf="conditionPdf">
+                                <input class="btn btn-light" type="file" id="myfile" accept="application/pdf, .doc, .docx, .odf">
+                            </div>
+                            <!-- <div *ngIf="conditionExcel">
+                                <input class="btn btn-light" type="file" id="myfile" accept="application/pdf, .doc, .docx, .odf">
+                            </div>
+                            <div *ngIf="conditionWord">
+                                <input class="btn btn-light" type="file" id="myfile" accept="application/pdf, .doc, .docx, .odf">
+                            </div> -->
+                                                        
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="col-5">
+            <img id="img1" src="https://images.unsplash.com/photo-1584628804801-aa1a640cba8e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="">
+        </div>
+    </div>
 </div>
-<br>
-<div class="row" style="margin-left: 20px;">
-  <div class="col-7">
-    <form class="form">
-      <div class="form-group row ">
-        <div class="col-sm-5">
-        <label for="inputPassword" class="  ">Document Name : </label>
-      </div>
-        <div class="col-sm-6">
-          <input type="text" class="form-control" id="docname" placeholder="Enter the document name" (keyup)="setName($event)">
-        </div>
-        
-      </div>
-      <div class="form-group row my-3">
-        <div class="col-sm-5">
-        <label for="inputPassword" class="">Document Type : </label>
-      </div>
-        <div class="col-sm-6">
-        <select name="doctype" class="form-control" id="doctype" (change)="setType($event)">
-          <!-- <option value="default"> --Choose an option-- </option> -->
-          <option value="pdf">.Pdf</option>
-          <option value="word">.Word</option>
-          <option value="excel">.Excel</option>
-
-        </select>
-      </div>
-        
-      </div>
-      <div class="form-group row">
-        <div class="col-sm-5">
-        <label for="inputPassword" class="" >Document Description : </label>
-      </div>
-        <div class="col-sm-6">
-          
-          <input type="text" class="form-control" id="docdesc" placeholder="Enter the description" (keyup)="setDescription($event)">
-        </div>
-        
-      </div>
-      
-      <div class="row mt-4 ">
-        <div class="col-3">
-          <button class="btn btn-danger btn-lg px-4 py-2 btn-block font-weight-bold"> RESET </button>
-        </div>
-        <div class="col-3">
-          <button class="btn btn-success btn-lg btn-block px-3 py-2 font-weight-bold" (click)="addDocuments()" >CREATE</button>      
-        </div>
-        <!-- <div class="col-3">
-          <button routerLink="/docmain2" class="btn btn-success btn-block btn-lg font-weight-bold" >UPLOAD</button>
-        </div> -->
-      </div>
-      
-      
-      
-      
-
-
-      </form>
-  </div>
-  <div class="col-5">
-    <img id="img1"src="https://images.unsplash.com/photo-1584628804801-aa1a640cba8e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="">
-  </div>
-
-</div>
-<!-- <div class="right">
-
-</div>
-<div class="left">
- 
-</div> -->
 <br>
 <div class="bar2">
   <div class="container">
@@ -166,7 +130,7 @@
   <div class="container text-center pt-2 pt-md-4 pt-lg-5 pb-xl-3">
     <div class="row justify-content-center pt-xxl-2">
       <div class="col-xl-6 col-lg-7 col-md-9 col-sm-11">
-        <h2 class="h1 pb-3 mb-3"> <i class="fa-solid fa-dove"></i> REGISTER YOUR PRESENCE </h2>
+        <h2 class="h1 pb-3 mb-3"> REGISTER YOUR PRESENCE </h2>
         <form class="subscription-form position-relative validate" action="https://studio.us12.list-manage.com/subscribe/post?u=c7103e2c981361a6639545bd5&amp;amp;id=29ca296126" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate="">
           <div class="d-flex flex-column flex-sm-row">
             <div class="position-relative w-100 mb-3 mb-sm-0 me-sm-3">
@@ -189,59 +153,3 @@
     </div>
   </div>
 </footer>
-
-<!-- modal -->
-<div class="modal fade bd-example-modal-lg" id="modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="about-section">
-        <h1>About Us Page</h1>
-        <p>Some text about who we are and what we do.</p>
-        <p>Resize the browser window to see that this page is responsive by the way.</p>
-      </div>
-      
-      <h2 style="text-align:center">Our Team</h2>
-      <div class="row">
-        <div class="column">
-          <div class="card">
-            <img src="https://i.pinimg.com/736x/a7/e5/cc/a7e5cc557b59e3b4c0ba38531cfbfae0.jpg" alt="Jane" style="width:100%">
-            <div class="container">
-              <h2>Jane Doe</h2>
-              <p class="title">CEO & Founder</p>
-              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-              <p>jane@example.com</p>
-              <p><button class="button">Contact</button></p>
-            </div>
-          </div>
-        </div>
-      
-        <div class="column">
-          <div class="card">
-            <img src="https://c.pxhere.com/photos/2c/bd/entrepreneur_boss_man_businessman_young_professional_corporate_people-868229.jpg!d" alt="Mike" style="width:100%">
-            <div class="container">
-              <h2>Mike Ross</h2>
-              <p class="title">Art Director</p>
-              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-              <p>mike@example.com</p>
-              <p><button class="button">Contact</button></p>
-            </div>
-          </div>
-        </div>
-        
-        <div class="column">
-          <div class="card">
-            <img src="https://i.pinimg.com/736x/7a/d7/0b/7ad70b81da24aac498ff6c254a0bd868.jpg" alt="John" style="width:100%">
-            <div class="container">
-              <h2>John Doe</h2>
-              <p class="title">Designer</p>
-              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-              <p>john@example.com</p>
-              <p><button class="button">Contact</button></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      
-    </div>
-  </div>
-</div>
