--- a/src/app/docmain1/docmain1.component.css
+++ b/src/app/docmain1/docmain1.component.css
@@ -1,37 +1,164 @@
-.split {
-    height: 100%;
-    width: 50%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    overflow-x: hidden;
-    padding-top: 20px;
-  }
-  #body {
-    font-family: Arial;
-    color: white;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
+
+.font-meri{
+  font-family: 'Merriweather', serif;
+}
+.font-robo{
+  font-family: 'Roboto', sans-serif;
+}
+* {box-sizing: border-box;}
+
+/* body { 
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+} */
+
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 15px 10px;
+}
+.form{
+  background-color: white;
+  margin: 5px 5px;
+  border: 2px solid wheat;
+  padding: 100px;
+  height: 400px;
+  border-radius: 8px;
+  font-size: larger;
+}
+.br{
+  border-radius: 8px;
+}
+/* .btn{
+  width: 70px;
+  height: 35px;
+  color: white;
+  background-color: rgb(255, 187, 0);
+  border-radius: 20px;
+} */
+#img1{
+  width: 540px;
+  height: 400px;
+  border-radius: 8px;
+}
+.header a {
+  float: left;
+  color: #797979;
+  text-align: center;
+  padding: 5px;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  /* background-color: black; */
+  color: #000;
+}
+
+.header-right {
+  float: right;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    /* float: none; */
+    /* display: block; */
+    text-align: left;
   }
   
-  .left {
-    left: 0;
-    background-color: white;
+  .header-right {
+    float: none;
   }
+}
+/* .right{
+  background-color: wheat;
+  width: 100%;
+  height: 500px;
+}
+.left{
+  width:40%;
+  position: absolute;
+  height: 500px;
+  background-color: beige;
+  top: 89px;
+  right: 0;
+} */
+.card-deck{
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.bar{
+  background: #bdc3c7;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+/* height: 300px; */
+}
+.bar2{
+  background: #bdc3c7;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   
-  .right {
-    right: 0;
-    background-color: wheat;
+/* height: 300px; */
+}
+
+
+/* modal styles */
+.column {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+.about-section {
+  padding: 50px;
+  text-align: center;
+  background-color: #474e5d;
+  color: white;
+}
+
+.title {
+  color: grey;
+}
+
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.button:hover {
+  background-color: #555;
+}
+
+@media screen and (max-width: 650px) {
+  .column {
+    width: 100%;
+    display: block;
   }
-  
-  .centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-  
-  .centered img {
-    width: 150px;
-    border-radius: 50%;
-  }
-  
+}
